[gd_scene load_steps=10 format=3 uid="uid://30utc3at4owp"]

[ext_resource type="Texture2D" uid="uid://c0kgmiydslua7" path="res://Art/Character/wp_sunset.png" id="1_idj7w"]
[ext_resource type="Texture2D" uid="uid://vagnyei7uiaw" path="res://Art/Character/Katlyn-Base.png" id="1_r150o"]
[ext_resource type="Script" uid="uid://ci5tfov1n0otd" path="res://Scripts/GameManager.gd" id="3_kln2b"]
[ext_resource type="FontFile" uid="uid://82qj0rpumxrm" path="res://Art/04B_08__.TTF" id="4_rgh2o"]
[ext_resource type="AudioStream" uid="uid://wkjk6mi4dxqs" path="res://SFX/FX/correct_player2.wav" id="5_jw32o"]
[ext_resource type="AudioStream" uid="uid://dowyp57um7kg4" path="res://SFX/FX/wrong_player2.wav" id="6_50glp"]
[ext_resource type="AudioStream" uid="uid://dcv5o6fhds57v" path="res://SFX/FX/correct_player1.wav" id="7_vy5pj"]
[ext_resource type="AudioStream" uid="uid://bvsvyotnen0gl" path="res://SFX/FX/wrong_player1.wav" id="8_50glp"]
[ext_resource type="AudioStream" uid="uid://c10hm3tv5ui5h" path="res://SFX/OST/M@GICALCURE! LOVE SHOT!.mp3" id="9_vy5pj"]

[node name="Node2D" type="Node2D"]

[node name="WpSunset" type="Sprite2D" parent="."]
position = Vector2(320, 191)
scale = Vector2(1, 0.8)
texture = ExtResource("1_idj7w")

[node name="Katlyn-base" type="Sprite2D" parent="."]
position = Vector2(320, 232)
texture = ExtResource("1_r150o")

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource("3_kln2b")

[node name="CanvasLayer" type="CanvasLayer" parent="GameManager"]

[node name="Player2UI" type="Panel" parent="GameManager/CanvasLayer"]
offset_left = 440.0
offset_right = 640.0
offset_bottom = 360.0

[node name="TimerLabel" type="Label" parent="GameManager/CanvasLayer/Player2UI"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("4_rgh2o")
theme_override_font_sizes/font_size = 16

[node name="ScoreLabel" type="Label" parent="GameManager/CanvasLayer/Player2UI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 40.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_rgh2o")
theme_override_font_sizes/font_size = 16

[node name="CorrectSoundPlayer" type="AudioStreamPlayer2D" parent="GameManager/CanvasLayer/Player2UI"]
stream = ExtResource("5_jw32o")

[node name="WrongSoundPlayer" type="AudioStreamPlayer2D" parent="GameManager/CanvasLayer/Player2UI"]
stream = ExtResource("6_50glp")

[node name="SequenceBox" type="GridContainer" parent="GameManager/CanvasLayer/Player2UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -55.0
offset_right = 90.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(90, 0)
columns = 5

[node name="0" type="TextureRect" parent="GameManager/CanvasLayer/Player2UI/SequenceBox"]
layout_mode = 2

[node name="1" type="TextureRect" parent="GameManager/CanvasLayer/Player2UI/SequenceBox"]
layout_mode = 2

[node name="2" type="TextureRect" parent="GameManager/CanvasLayer/Player2UI/SequenceBox"]
layout_mode = 2

[node name="3" type="TextureRect" parent="GameManager/CanvasLayer/Player2UI/SequenceBox"]
layout_mode = 2

[node name="4" type="TextureRect" parent="GameManager/CanvasLayer/Player2UI/SequenceBox"]
layout_mode = 2

[node name="5" type="TextureRect" parent="GameManager/CanvasLayer/Player2UI/SequenceBox"]
layout_mode = 2

[node name="6" type="TextureRect" parent="GameManager/CanvasLayer/Player2UI/SequenceBox"]
layout_mode = 2

[node name="7" type="TextureRect" parent="GameManager/CanvasLayer/Player2UI/SequenceBox"]
layout_mode = 2

[node name="8" type="TextureRect" parent="GameManager/CanvasLayer/Player2UI/SequenceBox"]
layout_mode = 2

[node name="9" type="TextureRect" parent="GameManager/CanvasLayer/Player2UI/SequenceBox"]
layout_mode = 2

[node name="Player1UI" type="Panel" parent="GameManager/CanvasLayer"]
offset_right = 200.0
offset_bottom = 360.0
size_flags_horizontal = 8

[node name="TimerLabel" type="Label" parent="GameManager/CanvasLayer/Player1UI"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("4_rgh2o")
theme_override_font_sizes/font_size = 16

[node name="ScoreLabel" type="Label" parent="GameManager/CanvasLayer/Player1UI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 40.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_rgh2o")
theme_override_font_sizes/font_size = 16

[node name="CorrectSoundPlayer" type="AudioStreamPlayer2D" parent="GameManager/CanvasLayer/Player1UI"]
stream = ExtResource("7_vy5pj")

[node name="WrongSoundPlayer" type="AudioStreamPlayer2D" parent="GameManager/CanvasLayer/Player1UI"]
stream = ExtResource("8_50glp")

[node name="SequenceBox" type="GridContainer" parent="GameManager/CanvasLayer/Player1UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -55.0
offset_right = 90.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(90, 0)
columns = 5

[node name="0" type="TextureRect" parent="GameManager/CanvasLayer/Player1UI/SequenceBox"]
layout_mode = 2

[node name="1" type="TextureRect" parent="GameManager/CanvasLayer/Player1UI/SequenceBox"]
layout_mode = 2

[node name="2" type="TextureRect" parent="GameManager/CanvasLayer/Player1UI/SequenceBox"]
layout_mode = 2

[node name="3" type="TextureRect" parent="GameManager/CanvasLayer/Player1UI/SequenceBox"]
layout_mode = 2

[node name="4" type="TextureRect" parent="GameManager/CanvasLayer/Player1UI/SequenceBox"]
layout_mode = 2

[node name="5" type="TextureRect" parent="GameManager/CanvasLayer/Player1UI/SequenceBox"]
layout_mode = 2

[node name="6" type="TextureRect" parent="GameManager/CanvasLayer/Player1UI/SequenceBox"]
layout_mode = 2

[node name="7" type="TextureRect" parent="GameManager/CanvasLayer/Player1UI/SequenceBox"]
layout_mode = 2

[node name="8" type="TextureRect" parent="GameManager/CanvasLayer/Player1UI/SequenceBox"]
layout_mode = 2

[node name="9" type="TextureRect" parent="GameManager/CanvasLayer/Player1UI/SequenceBox"]
layout_mode = 2

[node name="MiddleTextLabel" type="Label" parent="GameManager/CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -115.0
offset_top = -67.0
offset_right = 115.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_rgh2o")
theme_override_font_sizes/font_size = 10

[node name="VoicePlayer" type="AudioStreamPlayer2D" parent="GameManager"]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_vy5pj")
autoplay = true
